@@ -8,8 +8,8 @@
 
 package sirius.pasta.noodle.compiler;
 
-import parsii.tokenizer.ParseError;
-import parsii.tokenizer.Position;
+import sirius.kernel.tokenizer.ParseError;
+import sirius.kernel.tokenizer.Position;
 import sirius.kernel.Sirius;
 import sirius.kernel.commons.Strings;
 import sirius.kernel.di.std.PriorityParts;
@@ -23,7 +23,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Provides a context for compiling a <tt>Noodle</tt> script.
@@ -199,7 +198,7 @@ public class CompilationContext {
                           .map(parseError -> new CompileError(parseError,
                                                               sourceCodeInfo.fetchLine(parseError.getPosition()
                                                                                                  .getLine())))
-                          .collect(Collectors.toList());
+                          .toList();
     }
 
     /**
